@@ -242,7 +242,7 @@ public class EncounterMapper {
     }
 
     private boolean hasValidCategoryCompoundStatement(RCMRMT030101UKCompoundStatement compoundStatement) {
-        return compoundStatement != null && CATEGORY_CLASS_CODE.equals(compoundStatement.getClassCode().get(0));
+        return compoundStatement != null && CATEGORY_CLASS_CODE.equals(compoundStatement.getClassCode().getFirst());
     }
 
     private List<RCMRMT030101UKEhrComposition> getEncounterEhrCompositions(RCMRMT030101UKEhrExtract ehrExtract) {
@@ -278,24 +278,31 @@ public class EncounterMapper {
     }
 
     private boolean hasValidTopicCompoundStatement(RCMRMT030101UKCompoundStatement compoundStatement) {
-        return compoundStatement != null && TOPIC_CLASS_CODE.equals(compoundStatement.getClassCode().get(0));
+        return compoundStatement != null && TOPIC_CLASS_CODE.equals(compoundStatement.getClassCode().getFirst());
     }
 
     private Encounter mapToEncounter(
-            RCMRMT030101UKEhrComposition ehrComposition,
-            Patient patient,
-            String practiseCode,
-            List<Location> entryLocations
-    ) {
-        var id = ehrComposition.getId().getRoot();
+        RCMRMT030101UKEhrComposition ehrComposition,
+        Patient patient,
+        String practiseCode,
+        List<Location> entryLocations) {
 
-        var encounter = new Encounter();
+        var id = ehrComposition.getId().getRoot();
 
         final Meta meta = confidentialityService.createMetaAndAddSecurityIfConfidentialityCodesPresent(
             ENCOUNTER_META_PROFILE,
             ehrComposition.getConfidentialityCode()
         );
 
+        var encounter = initializeEncounter(ehrComposition, patient, practiseCode, id, meta);
+        setEncounterLocation(encounter, ehrComposition, entryLocations);
+
+        return encounter;
+    }
+
+    private Encounter initializeEncounter(RCMRMT030101UKEhrComposition ehrComposition, Patient patient,
+                                                   String practiseCode, String id, Meta meta) {
+        var encounter = new Encounter();
         encounter
             .setParticipant(getParticipants(ehrComposition.getAuthor(), ehrComposition.getParticipant2()))
             .setStatus(EncounterStatus.FINISHED)
@@ -305,9 +312,6 @@ public class EncounterMapper {
             .addIdentifier(buildIdentifier(id, practiseCode))
             .setMeta(meta)
             .setId(id);
-
-        setEncounterLocation(encounter, ehrComposition, entryLocations);
-
         return encounter;
     }
 
